<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grad"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_border">

            <ImageView
                android:id="@+id/profilePhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:adjustViewBounds="true"
                android:background="@drawable/circle"
                android:contentDescription="TODO"
                android:padding="3dp"
                android:scaleType="centerInside"
                android:src="@drawable/profile" />

            <ImageView
                android:id="@+id/changeProfilePhotoButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignRight="@id/profilePhoto"
                android:layout_alignBottom="@id/profilePhoto"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="-5dp"
                android:adjustViewBounds="true"
                android:baselineAlignBottom="true"
                android:contentDescription="TODO"
                android:scaleType="centerInside"
                android:src="@drawable/ic_add_circle_outline_white_24dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUser"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/nameAndSurname"
            android:layout_marginTop="15sp"
            android:textSize="32sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:text="@string/address"
            android:textAllCaps="true"
            android:layout_marginTop="15sp"
            android:textSize="14sp"
            android:textColor="@color/address" />

        <ImageView
            android:id="@+id/settingsButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="false"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:scaleType="centerInside"
            android:src="@drawable/ic_settings" />

        <ImageView
            android:id="@+id/addFriendButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignStart="@id/settingsButton"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="9dp"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:scaleType="centerInside"
            android:src="@drawable/ic_person_add_white_24dp" />

        <ImageView
            android:id="@+id/reportButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="9dp"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:scaleType="centerInside"
            android:src="@drawable/ic_report_white_24dp" />

        <ImageView
            android:id="@+id/sendMessageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@id/reportButton"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="-40dp"
            android:adjustViewBounds="true"
            android:contentDescription="TODO"
            android:scaleType="centerInside"
            android:src="@drawable/ic_message_white_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linlay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@color/followersBg"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/followers"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/followersTag"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    android:textColor="@color/white"/>
                
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@color/followingBg"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/confidence"
                    android:textSize="25sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/confidenceTag"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linlay1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biographyTag"
                    android:textColor="@color/headings"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/biography"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebookTag"
                    android:textColor="@color/headings"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/facebook"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instagramTag"
                    android:textColor="@color/headings"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/instagram"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitterTag"
                    android:textColor="@color/headings"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/twitterUsername"
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>